add contact and campaign documentation + fix some models
